--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,4 +1,4 @@
-name: Checkstyle
+name: Run Linter
 
 on:
   push:
@@ -9,20 +9,22 @@ on:
       - main
 
 jobs:
-  checkstyle:
+  linter:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
+          node-version: 20.14.0
 
       - name: Install dependencies
-        run: mvn install
+        run: npm install
 
-      - name: Run checkstyle
-        run: mvn checkstyle:check
+      - name: Run linter
+        run: npm run linter
+
+
